Adding ant task to create the jar file - Fix usage of Graph class in GrammarExtractor

--- a/build.xml
+++ b/build.xml
@@ -30,6 +30,15 @@
       </batchtest>
     </junit>
   </target>
+  
+  <target name="jar" depends="compile">
+    <mkdir dir="dest/jar"/>
+    <jar destfile="dest/jar/FuzzSpecs.jar" basedir="build/classes">
+      <!--manifest>
+        <attribute name="Main-Class" value="oata.HelloWorld"/>
+      </manifest-->
+    </jar>
+  </target>
 
 </project>
 
