--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
 
   <target name="compile">
     <mkdir dir="build/classes"/>
-    <javac includeantruntime="false" srcdir="src/examples" destdir="build/classes" classpathref="classpath"/>
+    <javac includeantruntime="false" debug="true" srcdir="src/examples" destdir="build/classes" classpathref="classpath"/>
     <javac includeantruntime="false" srcdir="src/main" destdir="build/classes" classpathref="classpath"/>
     <javac includeantruntime="false" srcdir="src/test" destdir="build/classes" classpathref="classpath"/>
   </target>
